Added Page Layout and Structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,60 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="head-top">
+            <div class="logo">
+                <img src="./images/head-logo.png" alt="burning lion logo" height="50px" width="50px">
+            </div>
+            <div class="links">
+                <ul>
+                    <li><a href="#">Header Link 1</a></li>
+                    <li><a href="#">Header Link 2</a></li>
+                    <li><a href="#">Header Link 3</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="header-hero">
+            <div class="header-content">
+                <h1>This Website is Awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button>Sign Up</button>
+            </div>
+            <div class="hero-img">
+                <img src="./images/placeholder.jpg" alt="placeholder image" height="290px" width="360px">
+            </div>
+        </div>
+    </header>
+
+    <div class="content">
+        <h2>Some random information.</h2>
+
+        <figure class="card"><img src="./images/cardimg.jpg" alt="" srcset="">
+            <figcaption>this is some subtext under an illustration or image</figcaption>
+        </figure>
+        <figure class="card"><img src="./images/cardimg.jpg" alt="" srcset="">
+            <figcaption>this is some subtext under an illustration or image</figcaption>
+        </figure>
+        <figure class="card"><img src="./images/cardimg.jpg" alt="" srcset="">
+            <figcaption>this is some subtext under an illustration or image</figcaption>
+        </figure>
+        <figure class="card"><img src="./images/cardimg.jpg" alt="" srcset="">
+            <figcaption>this is some subtext under an illustration or image</figcaption>
+        </figure>
+    </div>
+
+    <div class="quote">
+        <p>Something something by something something</p>
+    </div>
+
+    <div class="call-to-action">
+        <p>test</p>
+    </div>
+
+    <div class="footer">
+        <p>Copyright &copy;</p>
+    </div>
+
+
 </body>
 </html>
