Replace content div with figure and figcaption

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <header class="header">
         <div class="head-top">
             <div class="logo">
-                <img src="./images/head-logo.png" alt="burning lion logo" height="50px" width="50px">
+                <a href="#">
+                    <img src="./images/head-logo.png" alt="burning lion logo" height="50px" width="50px">
+                </a>
             </div>
             <div class="links">
                 <ul>
@@ -32,33 +34,43 @@
         </div>
     </header>
 
-    <div class="content">
-        <h2>Some random information.</h2>
+    
+    <h2>Some random information.</h2>
+        <div class="content">
+            <figure class="cards">
+                <img src="./images/cardimg.jpg" alt="">
+                <figcaption class="caption">This is some subtext under an illustration or image</figcaption>
+            </figure>
 
-        <figure class="card"><img src="./images/cardimg.jpg" alt="" srcset="">
-            <figcaption>this is some subtext under an illustration or image</figcaption>
-        </figure>
-        <figure class="card"><img src="./images/cardimg.jpg" alt="" srcset="">
-            <figcaption>this is some subtext under an illustration or image</figcaption>
-        </figure>
-        <figure class="card"><img src="./images/cardimg.jpg" alt="" srcset="">
-            <figcaption>this is some subtext under an illustration or image</figcaption>
-        </figure>
-        <figure class="card"><img src="./images/cardimg.jpg" alt="" srcset="">
-            <figcaption>this is some subtext under an illustration or image</figcaption>
-        </figure>
-    </div>
+            <figure class="cards">
+                <img src="./images/cardimg.jpg" alt="">
+                <figcaption class="caption">This is some subtext under an illustration or image</figcaption>
+            </figure>
 
-    <div class="quote">
-        <p>Something something by something something</p>
-    </div>
+            <figure class="cards">
+                <img src="./images/cardimg.jpg" alt="">
+                <figcaption class="caption">This is some subtext under an illustration or image</figcaption>
+            </figure>
+
+            <figure class="cards">
+                <img src="./images/cardimg.jpg" alt="">
+                <figcaption class="caption">This is some subtext under an illustration or image</figcaption>
+            </figure>
+        </div>
+       
+    <blockquote>
+        <q>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. 
+            Who knows? All I know is that it looks nice.
+        </q>
+        <footer><strong>-Someone, not famous</strong></footer>
+    </blockquote>
 
     <div class="call-to-action">
         <p>test</p>
     </div>
 
-    <div class="footer">
-        <p>Copyright &copy;</p>
+    <div class="footer-btm">
+        <p>Copyright &copy; Owaym Github Project 2024</p>
     </div>
 
 
