Added buttons for footer

--- a/index.html
+++ b/index.html
@@ -58,18 +58,27 @@
             </figure>
         </div>
        
-    <blockquote>
-        <q>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. 
+    <section class="sect-head">
+        <div class="quote">
+            <q>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. 
             Who knows? All I know is that it looks nice.
-        </q>
-        <footer><strong>-Someone, not famous</strong></footer>
-    </blockquote>
+            </q>
+        <p><strong>-Someone, not famous</strong></p>
+        </div>
+    </section>
 
-    <div class="call-to-action">
-        <p>test</p>
-    </div>
-
-    <div class="footer-btm">
+    <section class="cta-head">
+        <div class="cta">
+            <div class="cta-attr">
+                <h3>Call to action! It's time!</h3>
+                    <div class="cta-btn">
+                        <p>Sign up for our product by clicking that button right over there!</p>
+                        <button>Sign up</button>
+                    </div>
+            </div>
+        </div>
+    </section>
+    <div class="footer">
         <p>Copyright &copy; Owaym Github Project 2024</p>
     </div>
 
