Added containers to CTA section

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
         <div class="cta">
             <div class="cta-attr">
                 <h3>Call to action! It's time!</h3>
-                    <div class="cta-btn">
-                        <p>Sign up for our product by clicking that button right over there!</p>
-                        <button>Sign up</button>
-                    </div>
+                <p>Sign up for our product by clicking that button right over there!</p>
+                
+                       
             </div>
+            <button class="sign-btn">Sign up</button>
         </div>
     </section>
     <div class="footer">
